k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmyshow-service
  namespace: bookmyshow
spec:
  selector:
    app: bookmyshow
  ports:
    - protocol: TCP
      port: 80          # external port
      targetPort: 8080  # container port
  type: LoadBalancer    # use NodePort for minikube local testing
